# local-agent-hub

./: .gitignore  LICENSE  README.md  feishu-local-agent-hub-prd.md  product-overview.html  启动本地Agent.bat
.claude/: launch.json
backend/: .env.example  launcher.py  launcher.spec  pyproject.toml  version_info.txt
backend/app/: __init__.py  config.py  db.py  main.py  schemas.py
backend/app/agents/: __init__.py  base.py  base_analysis.py  collab_dispatch.py  document_map.py  html_page.py  index_enrich.py  knowledge_governance.py  local_image.py  meeting_minutes.py  pdf_recognition.py
backend/app/feishu/: __init__.py  cli.py  mock.py
backend/app/html/: __init__.py  design_system.py  renderer.py
backend/app/html/templates/: announcement.html  internal_wiki.html  lumen_base.html  project_show.html
backend/app/llm/: __init__.py  client.py  prompts.py
backend/app/routes/: __init__.py  agents.py  assets.py  auth.py  autoextract.py  base.py  diagnostics.py  dispatch.py  localdir.py  org.py  scenes.py  summaries.py  tasks.py  writeback.py
backend/app/services/: __init__.py  audit.py  auto_extract.py  capture_session.py  chart_builder.py  contract_finance.py  doc_images.py  facets.py  governance.py  index_service.py  local_dir.py  local_extract.py  office_reader.py  org_graph.py  pdf_reader.py  screenshot.py  summary_service.py  table_profile.py  table_query.py  table_reader.py  task_runner.py
config/: agents.yaml  classification_rules.yaml  html_templates.yaml
docs/: 架构与工作原理.md  飞书权限说明.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  (+1 more)
(+36 files in other folders)
