[project]
name = "feishu-agent-hub-backend"
version = "0.1.0"
description = "Local backend for Local Agent Hub — wraps lark-cli and orchestrates agents."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "openai>=1.30",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "structlog>=24.1",
    "anyio>=4.4",
    "python-multipart>=0.0.9",
    # 文件解析：PDF（云盘 PDF 识别）+ Office/HTML（云盘上传文件解析）
    "pymupdf>=1.24",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
    "python-pptx>=0.6.23",
    # 本地目录：全局快捷键（Enter 触发截图）。截图本身复用已内置的 Pillow（ImageGrab）。
    "keyboard>=0.13.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
